# hindsight-clients/go/model_knowledge_page_graph_response.go
@@ -1,242 +1,0 @@
-/*
-Hindsight HTTP API
-
-HTTP API for Hindsight
-
-API version: 0.8.4
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package hindsight
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the KnowledgePageGraphResponse type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &KnowledgePageGraphResponse{}
-
-// KnowledgePageGraphResponse Source memories as nodes, clustered by the page they ground.
-type KnowledgePageGraphResponse struct {
-	Nodes []map[string]interface{} `json:"nodes"`
-	Edges []map[string]interface{} `json:"edges"`
-	TotalPages int32 `json:"total_pages"`
-	TotalMemories int32 `json:"total_memories"`
-}
-
-type _KnowledgePageGraphResponse KnowledgePageGraphResponse
-
-// NewKnowledgePageGraphResponse instantiates a new KnowledgePageGraphResponse object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewKnowledgePageGraphResponse(nodes []map[string]interface{}, edges []map[string]interface{}, totalPages int32, totalMemories int32) *KnowledgePageGraphResponse {
-	this := KnowledgePageGraphResponse{}
-	this.Nodes = nodes
-	this.Edges = edges
-	this.TotalPages = totalPages
-	this.TotalMemories = totalMemories
-	return &this
-}
-
-// NewKnowledgePageGraphResponseWithDefaults instantiates a new KnowledgePageGraphResponse object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewKnowledgePageGraphResponseWithDefaults() *KnowledgePageGraphResponse {
-	this := KnowledgePageGraphResponse{}
-	return &this
-}
-
-// GetNodes returns the Nodes field value
-func (o *KnowledgePageGraphResponse) GetNodes() []map[string]interface{} {
-	if o == nil {
-		var ret []map[string]interface{}
-		return ret
-	}
-
-	return o.Nodes
-}
-
-// GetNodesOk returns a tuple with the Nodes field value
-// and a boolean to check if the value has been set.
-func (o *KnowledgePageGraphResponse) GetNodesOk() ([]map[string]interface{}, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return o.Nodes, true
-}
-
-// SetNodes sets field value
-func (o *KnowledgePageGraphResponse) SetNodes(v []map[string]interface{}) {
-	o.Nodes = v
-}
-
-// GetEdges returns the Edges field value
-func (o *KnowledgePageGraphResponse) GetEdges() []map[string]interface{} {
-	if o == nil {
-		var ret []map[string]interface{}
-		return ret
-	}
-
-	return o.Edges
-}
-
-// GetEdgesOk returns a tuple with the Edges field value
-// and a boolean to check if the value has been set.
-func (o *KnowledgePageGraphResponse) GetEdgesOk() ([]map[string]interface{}, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return o.Edges, true
-}
-
-// SetEdges sets field value
-func (o *KnowledgePageGraphResponse) SetEdges(v []map[string]interface{}) {
-	o.Edges = v
-}
-
-// GetTotalPages returns the TotalPages field value
-func (o *KnowledgePageGraphResponse) GetTotalPages() int32 {
-	if o == nil {
-		var ret int32
-		return ret
-	}
-
-	return o.TotalPages
-}
-
-// GetTotalPagesOk returns a tuple with the TotalPages field value
-// and a boolean to check if the value has been set.
-func (o *KnowledgePageGraphResponse) GetTotalPagesOk() (*int32, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.TotalPages, true
-}
-
-// SetTotalPages sets field value
-func (o *KnowledgePageGraphResponse) SetTotalPages(v int32) {
-	o.TotalPages = v
-}
-
-// GetTotalMemories returns the TotalMemories field value
-func (o *KnowledgePageGraphResponse) GetTotalMemories() int32 {
-	if o == nil {
-		var ret int32
-		return ret
-	}
-
-	return o.TotalMemories
-}
-
-// GetTotalMemoriesOk returns a tuple with the TotalMemories field value
-// and a boolean to check if the value has been set.
-func (o *KnowledgePageGraphResponse) GetTotalMemoriesOk() (*int32, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.TotalMemories, true
-}
-
-// SetTotalMemories sets field value
-func (o *KnowledgePageGraphResponse) SetTotalMemories(v int32) {
-	o.TotalMemories = v
-}
-
-func (o KnowledgePageGraphResponse) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o KnowledgePageGraphResponse) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["nodes"] = o.Nodes
-	toSerialize["edges"] = o.Edges
-	toSerialize["total_pages"] = o.TotalPages
-	toSerialize["total_memories"] = o.TotalMemories
-	return toSerialize, nil
-}
-
-func (o *KnowledgePageGraphResponse) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"nodes",
-		"edges",
-		"total_pages",
-		"total_memories",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varKnowledgePageGraphResponse := _KnowledgePageGraphResponse{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varKnowledgePageGraphResponse)
-
-	if err != nil {
-		return err
-	}
-
-	*o = KnowledgePageGraphResponse(varKnowledgePageGraphResponse)
-
-	return err
-}
-
-type NullableKnowledgePageGraphResponse struct {
-	value *KnowledgePageGraphResponse
-	isSet bool
-}
-
-func (v NullableKnowledgePageGraphResponse) Get() *KnowledgePageGraphResponse {
-	return v.value
-}
-
-func (v *NullableKnowledgePageGraphResponse) Set(val *KnowledgePageGraphResponse) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableKnowledgePageGraphResponse) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableKnowledgePageGraphResponse) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableKnowledgePageGraphResponse(val *KnowledgePageGraphResponse) *NullableKnowledgePageGraphResponse {
-	return &NullableKnowledgePageGraphResponse{value: val, isSet: true}
-}
-
-func (v NullableKnowledgePageGraphResponse) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableKnowledgePageGraphResponse) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
